Fix overlapped tab title/icon rendering in Chrome
Fixes #160

--- a/axelor-front/src/layout/nav-tabs/nav-tabs.module.scss
+++ b/axelor-front/src/layout/nav-tabs/nav-tabs.module.scss
@@ -49,8 +49,10 @@
   display: flex;
 }
 
-.tabText {
-  // XXX: Fix overlapped tab text rendering in Chrome
+// XXX: Chrome overlapped rendering
+.tabTitle,
+.tabText,
+.tabIcon {
   z-index: 1;
 }
 
